# financial-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  env.example  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/: api.py  config.py  deps.py  embeddings.py  ingestion.py  rate_limit.py  retrieval.py
tests/: test_api.py  test_auth.py  test_embeddings.py  test_ingestion.py  test_rate_limit.py  test_retrieval.py
