[project]
name = "financial-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-huggingface",
    "openai",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic",
    "httpx",
    "pypdf",
    "pydantic-settings"
]

[project.optional-dependencies]
gpu = ["torch", "faiss-gpu"]
cpu = ["torch", "faiss-cpu"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
